<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormulaireActivity">


    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/yncrea_isen_logo" />

    <TextView
        android:id="@+id/nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nom"
        android:textColor="#FF0000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView3"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/tonNom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/nomFamille"
        app:layout_constraintStart_toStartOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/nom" />

    <TextView
        android:id="@+id/prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prenom"
        android:textColor="#FF0000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/tonNom"
        app:layout_constraintVertical_bias="0.09" />

    <EditText
        android:id="@+id/tonPrenom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/pren"
        app:layout_constraintStart_toStartOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/prenom" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/naissance"
        android:textColor="#FF0000"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/tonPrenom"
        app:layout_constraintVertical_bias="0.16" />

    <EditText
        android:id="@+id/tadateJ"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:hint="@string/jour"
        app:layout_constraintStart_toStartOf="@+id/nom"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/tadateM"
        android:layout_width="45dp"
        android:layout_height="wrap_content"
        android:hint="@string/mois"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/tadateJ"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <EditText
        android:id="@+id/tadateA"
        android:layout_width="60dp"
        android:layout_height="wrap_content"
        android:hint="@string/annee"
        android:inputType="date"
        app:layout_constraintStart_toEndOf="@+id/tadateM"
        app:layout_constraintTop_toBottomOf="@+id/date" />

    <Button
        android:id="@+id/vale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="valider"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/affichage"
        app:layout_constraintHorizontal_bias="0.278"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tadateJ"
        app:layout_constraintVertical_bias="0.454" />

    <Button
        android:id="@+id/affichage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#FF0000"
        android:text="afficher"
        android:textColor="#FFFFFF"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/vale"
        app:layout_constraintTop_toBottomOf="@+id/tadateJ" />

</androidx.constraintlayout.widget.ConstraintLayout>