<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AffichageActivity">


    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/information"
        android:textColor="#838383"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/latitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintStart_toStartOf="@id/longitude"
        app:layout_constraintTop_toTopOf="@+id/photo"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/valLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valLatitude"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/latitude"
        app:layout_constraintTop_toTopOf="@id/latitude" />

    <TextView
        android:id="@+id/longitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/photo"
        app:layout_constraintVertical_bias="0.75" />

    <TextView
        android:id="@+id/valLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valLongitude"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@id/valLatitude"
        app:layout_constraintTop_toTopOf="@id/longitude" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/permissionRecycleView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo"
        app:layout_constraintVertical_bias="1.0" />

    <ImageView
        android:id="@+id/photo"
        android:layout_width="80dp"
        android:layout_height="80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.081"
        app:srcCompat="@drawable/photo" />

</androidx.constraintlayout.widget.ConstraintLayout>